# blog

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  404.html  AGENTS.md  CLAUDE.md  PAGE_VIEWS.md  build_mkdocs.sh  build_mkdocs_with_cairo.sh  check_links.py  check_more_tags.sh  check_no_heavy_assets.sh  ellipsis.yaml  enable_comments.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  generate_desc.py  generate_sitemap.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-doc.txt  sitemap.xml  sitemap.yaml
.claude/agents/: blog-crosslink-optimizer.md
.cursor/rules/: blog-cross-linking.mdc  blog-post-frontmatter.mdc  blog-post-standards.mdc  development-workflow.mdc  project-overview.mdc  shortlink-workflow.mdc
404/: index.html
assessment/: index.html
books/: index.html
contact/: index.html
docs/: 404.md  assessment.md  books.md  contact.md  courses.md  expert-calls.md  expert-network.md  experts-and-vendors.md  hiring.md  index.md  investments.md  jobs.md  popular.md  resume.md  services.md  systematically-improve-your-rag.md  test-cache.md  things.md  user_manual.md  writing-samples.md
docs/blog/: index.md
expert-calls/: index.html
experts-and-vendors/: index.html
investments/: index.html
jobs/: index.html
resume/: index.html
scripts/: fix_admonitions.py  page_views.py  shortlinks.py
search/: search_index.json
services/: index.html
systematically-improve-your-rag/: index.html
tests/: test_page_views.py
user_manual/: index.html
writing/: index.html
(+392 files in other folders)
