[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dub>=0.23.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-rss-plugin>=1.17.4",
    "mkdocstrings[python]>=0.30.1",
    "openai>=1.88.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
]
